Adaptando API para realizar autenticação via token e teste para validar login
